--- a/payroll/model/requirements.txt
+++ b/payroll/model/requirements.txt
@@ -1,3 +1,11 @@
+Flask==2.3.2
+mysql-connector-python
+Pillow==10.0.1
+numpy==1.24.5
+pandas==2.0.3
+face-recognition==1.3.0
+scikit-learn==1.3.0
+requests==2.31.0
 arrow==1.3.0
 colorama==0.4.6
 contextlib2==21.6.0
