--- a/payroll/model/requirements.txt
+++ b/payroll/model/requirements.txt
@@ -1,27 +1,27 @@
-Flask==2.3.2
+Flask
 mysql-connector-python
-Pillow==10.0.1
-numpy==1.24.5
-pandas==2.0.3
-face-recognition==1.3.0
-scikit-learn==1.3.0
-requests==2.31.0
-arrow==1.3.0
-colorama==0.4.6
-contextlib2==21.6.0
-DateTime==5.5
-engineering-notation==0.10.0
-execnet==2.1.1
-iniconfig==2.0.0
-mock==5.1.0
-numpy==2.0.0
-opencv-contrib-python==4.10.0.84
-opencv-python==4.10.0.84
-opencv-python-headless==4.10.0.84
-packaging==24.1
-pandas==2.2.2
+Pillow
+numpy
+pandas
+face-recognition
+scikit-learn
+requests
+arrow
+colorama
+contextlib2
+DateTime
+engineering-notation
+execnet
+iniconfig
+mock
+numpy
+opencv-contrib-python
+opencv-python
+opencv-python-headless
+packaging
+pandas
 path==16.14.0
-path.py==12.5.0
+path.py==12.5.0 
 pillow==10.4.0
 pluggy==1.5.0
 pytest==8.2.2
